--- a/package.json
+++ b/package.json
@@ -16,21 +16,30 @@
     "echarts": "^4.2.1",
     "element-ui": "^2.11.1",
     "express": "^4.17.1",
+    "fibers": "^5.0.0",
+    "file-saver": "^2.0.2",
     "js-cookie": "^2.2.1",
+    "kindeditor": "^4.1.10",
     "less": "^3.8.0",
-    "less-loader": "^4.1.0",
+    "less-loader": "^6.1.0",
     "mockjs": "^1.0.1-beta3",
     "moment": "^2.24.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "nprogress": "^0.2.0",
     "qrcodejs2": "0.0.2",
+    "request": "^2.88.2",
+    "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "svg-sprite-loader": "^4.2.1",
     "vue": "^2.6.10",
     "vue-i18n": "^8.14.0",
+    "vue-json-excel": "^0.2.98",
     "vue-quill-editor": "^3.0.6",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.1.2",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "weixin-jsapi": "^1.1.0",
+    "xlsx": "^0.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -44,8 +53,7 @@
     "eslint": "^6.2.2",
     "eslint-plugin-vue": "^6.2.2",
     "image-webpack-loader": "^5.0.0",
-    "less": "^3.10.3",
-    "less-loader": "^5.0.0",
+    "script-loader": "^0.7.2",
     "vue-hot-reload-api": "^2.3.3",
     "vue-loader": "^15.7.1",
     "vue-template-compiler": "^2.6.10",
